--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
 }
 
 .soustitre {
-    color: rgb(185, 180, 180);
+    color: rgb(61, 61, 61);
     width: 315px;
     display: flex;
     justify-content: flex-end;
@@ -367,7 +367,7 @@
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 240px;
-    width: 240px;
+    width: 260px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: aliceblue;
@@ -385,8 +385,8 @@
      border-top-right-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 240px;
-     height: 128px;
+     width: 260px;
+     height: 135px;
      border:solid 5px rgb(255, 255, 255);
    
     
@@ -490,7 +490,9 @@
 } 
 
    
-    
+ .nom {
+     margin-right: 20px;
+ }   
 
 
  
@@ -500,7 +502,7 @@
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 140px;
-    width: 333px;
+    width: 380px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: rgb(247, 248, 248);
@@ -518,7 +520,7 @@
      border-bottom-left-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 130px;
+     width: 150px;
      height: 140px;
      border:solid 5px rgb(255, 255, 255);
  
@@ -547,8 +549,9 @@
 
 
 /*activiter*/ 
+
 .titre_bloc_3 {
-    width: 230px;
+    width: 220px;
     display: flex;
     justify-content: flex-end; 
 }
@@ -560,6 +563,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 15px;
+ 
     
     
    
@@ -634,6 +638,7 @@
 .container_3 {
    padding-left: 15px;
    padding-top: 5px;
+   
     }
 
 .texte_style {
@@ -711,8 +716,29 @@
     .espace {
         display: none;
     }
+   
+    .logo {
+       margin-right: 5px;
+    }
+    .bouton_2{
+        margin-top: 25px;
+    }
+    .bouton_1 {
+        margin-top: 25px;
+    }
+    .bouton {
+        margin-top: 25px;
+    }
+    .card_2 {
+        margin-top: 10px;
+        width: 350px;
+    }
 
+    .image_2 {
+        width: 125px;
+    }
 }
+
 
 
 @media screen and (max-width: 755px){
@@ -725,7 +751,8 @@
   }
   .logo {
       order: 1;
-      margin-right: 0;
+      margin-right: 0px;
+    
   }
   .bouton {
       order: 3;
@@ -750,6 +777,7 @@
   }
   .bouton_2 {
       order: 2;
+      margin-top: 25px;
   }
   
   .bouton:hover {
@@ -898,9 +926,11 @@ a.bouton_5:hover {
     display: none;
 }
 ::placeholder {
-    color: #000;
+    color: #000 ;
     font-weight: bold;
     padding-left: 5px;
+
+    
 }
 
 
@@ -997,9 +1027,13 @@ a.bouton_5:hover {
     width: auto; 
    
  }
-
+ .ligne {
+     display: none;
+ }
 .card_2 {
     margin-top: 15px;
+    width: 350px;
+  
 }
   p {
       height: 18px; 
