--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 * { box-sizing: border-box  }
-* {font-family: 'Nanum Gothic', sans-serif; }
+* {font-family: 'Roboto', sans-serif; }
 
 
 
 /*tete de page */
 /*menu_logo*/
+
 .logo { 
     padding-left: 45px;
     margin-top: 20px;
@@ -53,25 +54,19 @@
   
 }
 
-.bouton_1 {
-    color: rgb(185, 180, 180);
-    text-decoration: none;
-    margin-left: 5rem;
-    padding: 30px;
-}
 
 
 
-.bouton_2 {
+.bouton_ins {
     color: rgb(3, 70, 214);
     text-decoration:none;
     padding: 30px;
-     margin-left: 5rem;
+    
 
     
   
 }
-.bouton_2:hover {
+.bouton_ins:hover {
     font-weight: bold;
 }
 
@@ -79,7 +74,7 @@
 /*titre*/
 
 .titre {
-    width: 520px;
+    width: 540px;
     display: flex;
     justify-content: flex-end;
     
@@ -87,7 +82,7 @@
 
 .soustitre {
     color: rgb(61, 61, 61);
-    width: 335px;
+    width: 325px;
     display: flex;
     justify-content: flex-end;
 }
@@ -319,8 +314,11 @@
      
      display:flex;
      margin-top: 50px; 
-     justify-content:space-around;
+     justify-content:space-between;
      flex-wrap: wrap;
+     margin-left: 30px;
+     margin-right: 30px;
+
 
  }
  .bloc_titre {
@@ -336,7 +334,7 @@
 
 .bloc_1 {
     height: auto;
-    width:960px;
+    width:800px;
     background-color:rgb(236, 236, 236); 
     border-radius: 25px;
     border-radius: 25px;
@@ -353,6 +351,7 @@
     display: flex;
     justify-content: space-around;
    flex-wrap: wrap;
+
    width: 100%;
    
     
@@ -367,7 +366,7 @@
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 240px;
-    width: 260px;
+    width: 230px;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: aliceblue;
@@ -385,7 +384,7 @@
      border-top-right-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 260px;
+     width: 230px;
      height: 135px;
      border:solid 5px rgb(255, 255, 255);
    
@@ -653,9 +652,7 @@
 }
 
 /*fin_de_page*/
-.margine {
-    height: 55px;
-}
+
 
 .fin_de_page {
     background-color: rgb(233, 231, 231);
@@ -663,6 +660,7 @@
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    margin-top: 25px;
     
  
    
@@ -707,7 +705,7 @@
        justify-content: space-evenly;
     }
     .marge {
-        width: 860px;
+        width: 850px;
     }
     .fin_de_page {
         display: flex;
@@ -720,15 +718,13 @@
     .logo {
        margin-right: 5px;
     }
-    .bouton_2{
-        margin-top: 25px;
-    }
-    .bouton_1 {
+    .bouton_ins{
         margin-top: 25px;
     }
     .bouton {
         margin-top: 25px;
     }
+  
     .card_2 {
         margin-top: 10px;
         width: 350px;
@@ -737,7 +733,13 @@
     .image_2 {
         width: 125px;
     }
+
+   .bloc {
+       display: flex;
+       justify-content: center;
+   }
 }
+
 
 
 
@@ -775,7 +777,7 @@
     padding-top: 25px;
 
   }
-  .bouton_2 {
+  .bouton_ins {
       order: 2;
       margin-top: 25px;
   }
@@ -784,10 +786,7 @@
     border-top:  0px;
     border-bottom: solid 3px  #0065Fc;
   }
-  .bouton_1:hover {
-    border-top:  0px;
-    border-bottom: solid 3px  #0065Fc;
-}
+
  
   body {
       margin: 0;
@@ -966,6 +965,8 @@ a.bouton_5:hover {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+    margin-left: 0px;
+     margin-right: 0px;
    
 }
 
