--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 /*tete de page */
 /*menu_logo*/
 
+
 .logo { 
     padding-left: 45px;
     margin-top: 20px;
@@ -110,7 +111,6 @@
 /*responsive_bouton*/
 
 @media screen and (min-width: 755px) {
-
 
 
 
@@ -328,7 +328,7 @@
 
 .bloc_her {
     height: auto;
-    width:800px;
+    width:60%;
     background-color:rgb(236, 236, 236); 
     border-radius: 25px;
     border-radius: 25px;
@@ -360,7 +360,7 @@
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 240px;
-    width: 230px;
+    width:30%;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: aliceblue;
@@ -378,7 +378,7 @@
      border-top-right-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 230px;
+     width: 100%;
      height: 135px;
      border:solid 5px rgb(255, 255, 255);
    
@@ -444,35 +444,42 @@
 .populair {
     display: flex;
     justify-content: space-around;
-    width: 450px;
+    width: 100%;
 
       
   }
 
   .icone_graphique {
      padding-top: 20px; 
-     padding-left: 100px;
+     padding-left: 40%;
   
   }
  
-  
+  .line{
 
-  
+  width: 100%;
+    margin-left: 5%;
+ 
+
+  }
+
+ 
 
 .bloc_popu {
-  
+   
     border-radius: 25px;
     display: flex;
     justify-content: center;
     gap: 10px;
     flex-wrap: wrap; 
 
+
   
 }
 
 .marge
 {  
-    width: 500px;
+    width: 35%;
     height: auto;
     border-radius: 25px;
     display:flex;
@@ -483,24 +490,24 @@
 } 
 
    
- .nom {
-     margin-right: 20px;
- }   
+
 
 
  
 .card_popu {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2);
     transition: 0.3s;
     height: 140px;
-    width: 380px;
+    width: 95%;
     border-radius: 25px;
     background-color: rgb(255, 255, 255);
     border-color: rgb(247, 248, 248);
     color: #000;
     text-decoration:none;
+    margin-bottom: 25px;
+   
 
  }
 
@@ -513,7 +520,7 @@
      border-bottom-left-radius: 25px;
      border-top-left-radius: 25px;
      object-fit: cover;
-     width: 150px;
+     width: 35%;
      height: 140px;
      border:solid 5px rgb(255, 255, 255);
  
@@ -522,13 +529,16 @@
  .container_popu {
    display: flex;
    flex-direction: column;
+   justify-content: space-around;
    border:solid 15px rgb(255, 255, 255);
    border-radius: 25px;
+   width: 55%;
  }
  .icone_etoile_popu {
     display: flex;
     color: rgb(18, 83, 223);
     border-top:solid 35px rgb(255, 255, 255);
+  
 
 }
 
@@ -692,6 +702,9 @@
        display: flex;
        justify-content: space-around;
        width: 100%;
+       flex-wrap: wrap;
+       margin: 0;
+
     }
     .populair {
         width: 100%;
@@ -783,6 +796,7 @@
    display: flex;
    justify-content: space-evenly;
    padding-top: 20px;
+  
    
   
 }
@@ -1080,8 +1094,11 @@ a.bouton_5:hover {
     {
         width: 100%;
     }
-  }
-
+  
+.line{
+    margin: 0;
+}
+}
 
  
    
